versioned_docs/version-4.0/intro/speed.md
---
title: Speed
---

Where math operations are concerned phpseclib will use whatever extensions are availale to speed up operations. The impact of these extensions on various versions of PHP is shown below.

Note that the following benchmarks were performed with phpseclib v1. phpseclib v3's performance should be comparable. The reason phpseclib v1 was employed is to show how PHP has sped up over the years.

The benchmarks were [performed on GitHub Actions](https://github.com/phpseclib/benchmarks) using Docker containers from [phpseclib/docker-php](https://github.com/phpseclib/docker-php).

## Benchmarks

<table class="benchmarks" border="1">
  <thead>
    <tr>
      <td class="background"></td>
      <td>PHP32</td>
      <td>PHP64</td>
      <td>BCMath</td>
      <td>PHP32</td>
      <td>PHP64</td>
      <td>BCMath</td>
      <td>GMP</td>
    </tr>
    <tr>
      <td class="background"></td>
      <td colspan="3" class="openssl">w/o OpenSSL</td>
      <td colspan="3" class="openssl">w/ OpenSSL</td>
      <td class="background"></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="highlight">
        <b>PHP 4.4</b>
      </td>
      <td class="red_0d">7.033</td>
      <td class="red_61">4.606</td>
      <td class="red_b0">2.310</td>
      <td class="red_e7">0.710</td>
      <td class="red_eb">0.587</td>
      <td class="red_fd">0.062</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.0</b>
      </td>
      <td class="red_00">7.396</td>
      <td class="red_59">4.825</td>
      <td class="red_b1">2.265</td>
      <td class="red_e6">0.749</td>
      <td class="red_ea">0.617</td>
      <td class="red_fd">0.061</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.1</b>
      </td>
      <td class="red_8e">3.278</td>
      <td class="red_ba">2.024</td>
      <td class="red_b2">2.257</td>
      <td class="red_f2">0.403</td>
      <td class="red_f3">0.352</td>
      <td class="red_fd">0.060</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.2</b>
      </td>
      <td class="red_81">3.666</td>
      <td class="red_b7">2.092</td>
      <td class="red_b2">2.244</td>
      <td class="red_f3">0.368</td>
      <td class="red_f5">0.316</td>
      <td class="red_fd">0.058</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.3</b>
      </td>
      <td class="red_8e">3.288</td>
      <td class="red_bd">1.939</td>
      <td class="red_b1">2.276</td>
      <td class="red_f3">0.356</td>
      <td class="red_f5">0.297</td>
      <td class="red_fe">0.058</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.4</b>
      </td>
      <td class="red_b8">2.067</td>
      <td class="red_d5">1.242</td>
      <td class="red_b1">2.288</td>
      <td class="red_f7">0.254</td>
      <td class="red_f8">0.209</td>
      <td class="red_fd">0.059</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.5</b>
      </td>
      <td class="red_b8">2.060</td>
      <td class="red_d6">1.200</td>
      <td class="red_b0">2.314</td>
      <td class="red_f7">0.249</td>
      <td class="red_f8">0.205</td>
      <td class="red_fe">0.058</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 5.6</b>
      </td>
      <td class="red_bb">1.989</td>
      <td class="red_d6">1.192</td>
      <td class="red_b0">2.311</td>
      <td class="red_f7">0.243</td>
      <td class="red_f8">0.206</td>
      <td class="red_fe">0.057</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 7.0</b>
      </td>
      <td class="red_e0">0.908</td>
      <td class="red_ed">0.548</td>
      <td class="red_b1">2.282</td>
      <td class="red_fc">0.089</td>
      <td class="red_fd">0.073</td>
      <td class="red_fe">0.055</td>
      <td class="red_ff">0.001</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 7.1</b>
      </td>
      <td class="red_e5">0.773</td>
      <td class="red_ee">0.500</td>
      <td class="red_b0">2.305</td>
      <td class="red_fd">0.082</td>
      <td class="red_fd">0.072</td>
      <td class="red_fe">0.056</td>
      <td class="red_ff">0.001</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 7.2</b>
      </td>
      <td class="red_e7">0.701</td>
      <td class="red_f0">0.460</td>
      <td class="red_b0">2.314</td>
      <td class="red_fd">0.064</td>
      <td class="red_fe">0.055</td>
      <td class="red_fe">0.055</td>
      <td class="red_ff">0.001</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 7.3</b>
      </td>
      <td class="red_e8">0.683</td>
      <td class="red_f0">0.445</td>
      <td class="red_b0">2.305</td>
      <td class="red_fd">0.063</td>
      <td class="red_fe">0.054</td>
      <td class="red_fe">0.053</td>
      <td class="red_ff">0.001</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 7.4</b>
      </td>
      <td class="red_ea">0.614</td>
      <td class="red_f2">0.403</td>
      <td class="red_af">2.349</td>
      <td class="red_fd">0.059</td>
      <td class="red_fe">0.050</td>
      <td class="red_fe">0.055</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.0</b>
      </td>
      <td class="red_e9">0.642</td>
      <td class="red_f1">0.415</td>
      <td class="red_b2">2.251</td>
      <td class="red_fd">0.060</td>
      <td class="red_fe">0.052</td>
      <td class="red_fe">0.053</td>
      <td class="red_ff">0.001</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.1</b>
      </td>
      <td class="red_e9">0.642</td>
      <td class="red_f1">0.416</td>
      <td class="red_b2">2.234</td>
      <td class="red_fd">0.060</td>
      <td class="red_fe">0.051</td>
      <td class="red_fe">0.053</td>
      <td class="red_ff">0.003</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.2</b>
      </td>
      <td class="red_ea">0.619</td>
      <td class="red_f1">0.407</td>
      <td class="red_b2">2.235</td>
      <td class="red_fd">0.060</td>
      <td class="red_fe">0.051</td>
      <td class="red_fe">0.054</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.3</b>
      </td>
      <td class="red_e9">0.646</td>
      <td class="red_f1">0.417</td>
      <td class="red_b3">2.205</td>
      <td class="red_fd">0.061</td>
      <td class="red_fe">0.052</td>
      <td class="red_fe">0.052</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.4</b>
      </td>
      <td class="red_ea">0.634</td>
      <td class="red_f1">0.417</td>
      <td class="red_fe">0.056</td>
      <td class="red_fd">0.061</td>
      <td class="red_fe">0.053</td>
      <td class="red_ff">0.010</td>
      <td class="red_ff">0.002</td>
    </tr>
  </tbody>
</table>

## Benchmarks with JIT

PHP 8 [introduced](https://wiki.php.net/rfc/jit) a new [Just-In-Time (JIT) compilation](https://en.wikipedia.org/wiki/Just-in-time_compilation) engine. The specific JIT settings that were used can be seen in the Docker containers [opcache.ini](https://github.com/phpseclib/docker-php/blob/8.0jit/opcache.ini).

<!--
PHP 8.4 introduced a new [JIT implementation based on the IR framework](https://wiki.php.net/rfc/jit-ir) but it doesn't seem to have amounted to much improvement gain where phpseclib is concerned.
-->

<table class="benchmarks" border="1">
  <thead>
    <tr>
      <td class="background"></td>
      <td>PHP32</td>
      <td>PHP64</td>
      <td>BCMath</td>
      <td>PHP32</td>
      <td>PHP64</td>
      <td>BCMath</td>
      <td>GMP</td>
    </tr>
    <tr>
      <td class="background"></td>
      <td colspan="3" class="openssl">w/o OpenSSL</td>
      <td colspan="3" class="openssl">w/ OpenSSL</td>
      <td class="background"></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="highlight">
        <b>PHP 8.0</b>
      </td>
      <td class="red_f8">0.204</td>
      <td class="red_fc">0.103</td>
      <td class="red_b2">2.255</td>
      <td class="red_fe">0.032</td>
      <td class="red_ff">0.029</td>
      <td class="red_fe">0.053</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.1</b>
      </td>
      <td class="red_f9">0.190</td>
      <td class="red_fd">0.087</td>
      <td class="red_b2">2.234</td>
      <td class="red_fe">0.033</td>
      <td class="red_ff">0.029</td>
      <td class="red_fe">0.055</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.2</b>
      </td>
      <td class="red_f9">0.188</td>
      <td class="red_fc">0.089</td>
      <td class="red_b2">2.238</td>
      <td class="red_fe">0.033</td>
      <td class="red_fe">0.042</td>
      <td class="red_fe">0.054</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.3</b>
      </td>
      <td class="red_f9">0.189</td>
      <td class="red_fc">0.087</td>
      <td class="red_b3">2.207</td>
      <td class="red_fe">0.033</td>
      <td class="red_ff">0.029</td>
      <td class="red_fe">0.052</td>
      <td class="red_ff">0.002</td>
    </tr>
    <tr>
      <td class="highlight">
        <b>PHP 8.4</b>
      </td>
      <td class="red_f9">0.179</td>
      <td class="red_fd">0.087</td>
      <td class="red_fe">0.058</td>
      <td class="red_fe">0.036</td>
      <td class="red_fe">0.032</td>
      <td class="red_ff">0.012</td>
      <td class="red_ff">0.002</td>
    </tr>
  </tbody>
</table>

## GMP Engine

[GMP](http://en.wikipedia.org/wiki/GNU_Multiple_Precision_Arithmetic_Library), to quote wikipedia, "_aims to be faster than any other bignum library_", using "_highly optimized assembly language code_".

## BCMath

BCMath was _significantly_ sped up in PHP 8.4. [BCMath Performance Improvement Explanation](https://speakerdeck.com/sakitakamachi/bcmath-performance-improvement-explanation) (in Japanese) explains how this was done.

## PHP32 / PHP64

These days, most systems are 64-bit, however, a notable exception are [Raspberry Pi](https://en.wikipedia.org/wiki/Raspberry_Pi_OS)'s.

On 32-bit systems phpseclib uses base-2**26 to reduce the number of digits of each number. When two 26-bit numbers are multiplied together the result is a 64-bit floating point (of which only 48 bits are used), which is then converted back to two 32-bit signed integers (of which only 26 bits are used).

On 64-bit systems phpseclib uses base-2**31 to reduce the number of digits of each number. When two 31-bit numbers are multiplied together the result is a 64-bit signed integer (of which only 62 bits are used), which is then converted back to two 32-bit signed integers (of which only 31 bits are used).

## OpenSSL Enhancements

Only used for powMod(). Converts the exponent and the modulo to an appropriately formatted RSA public key and performs unpadded RSA encryption with that.

## Security Tradeoffs

phpseclib prioritizes portability and practical performance over universal [constant-time](https://en.wikipedia.org/wiki/Timing_attack) guarantees. The real-world severity of timing attacks depends heavily on threat model. If secret operations are not performed on attacker-controlled input (eg. when an administrator uploads a private key for outbound SSH use) there is no meaningful timing oracle. Conversely, if untrusted users can repeatedly submit ciphertext that is decrypted with a long-lived server key, constant-time behavior becomes materially important. Security decisions should be driven by deployment context, not theoretical worst cases in isolation.

Because phpseclib is designed to run anywhere PHP runs, including environments without OpenSSL, it must sometimes rely on pure-PHP arithmetic or extensions like GMP, neither of which guarantees constant-time behavior. A fully constant-time BigInteger implementation in PHP would require fixed-width arithmetic, elimination of data-dependent branches, and uniform memory access patterns, resulting in severe performance penalties. For very large keys (eg. a 16K RSA key), such an approach would likely be impractically slow. Similarly, constant-time AES without hardware acceleration is dramatically slower than table-based implementations, and PHP cannot access [AES-NI](https://en.wikipedia.org/wiki/AES_instruction_set) instructions directly.

Where constant-time protections are inexpensive and practical - such as fixed-time string comparison, blinding during modular exponentiation, or careful padding checks - phpseclib applies them. However, imposing a 5x slowdown across all cryptographic operations in pursuit of absolute constant-time purity would render the library unusable in many of the constrained environments it targets. In practice, a widely deployable library with context-aware risk trade-offs is often more valuable than one that is theoretically ideal but operationally impractical.

See [Public Keys - Overview § Best Practices](publickeys/overview.mdx#best-practices) for a more in depth discussion.